FIOC-30-fixed time alignment on dashboard

--- a/global.css
+++ b/global.css
@@ -1793,11 +1793,13 @@ td .apptbutton.disabled, .apptbutton:disabled {
   line-height: 1.5;
   padding-top: 8px;
   font-size: 14px;
+  text-align: left;
 }
 
 @media (min-width: 768px) {
   #firstgridcontainer .firstcolumn {
     line-height: 52px;
+    text-align: center;
   }
 }
 
@@ -1808,6 +1810,7 @@ td .apptbutton.disabled, .apptbutton:disabled {
 }
 
 #secondgridcontainer .firstcolumn {
+  text-align: left;
   line-height: 1.5;
   padding-top: 8px;
   font-size: 14px;
@@ -1816,6 +1819,7 @@ td .apptbutton.disabled, .apptbutton:disabled {
 @media (min-width: 768px) {
   #secondgridcontainer .firstcolumn {
     line-height: 52px;
+    text-align: center;
   }
 }
 
